Add publication date for "Quit Smoking" app in apps section to enhance content detail and user information.

--- a/apps.html
+++ b/apps.html
@@ -66,6 +66,7 @@
             <p style="margin:10px 0 0; color:var(--muted);">
               "Quit Smoking" is your companion to track daily cigarette consumption and milestones on your smoke‑free journey.
             </p>
+            <p style="margin:8px 0 0; color:var(--muted); font-size:13px;">Published on Dec 16, 2024</p>
             <div class="cta" style="margin-top:10px;">
               <a class="btn primary" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1" target="_blank" rel="noopener">View on Google Play</a>
             </div>
