Update media asset paths in apps, books, and index sections for improved organization and consistency; add new images for apps, awards, and organizations.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="hero-badge reveal" aria-hidden="true">
           <div class="badge glow"></div>
-          <img class="avatar" src="media/iNandi.jpeg" alt="Gobinda Nandi portrait" loading="lazy" decoding="async">
+          <img class="avatar" src="media/logos/iNandi.jpeg" alt="Gobinda Nandi portrait" loading="lazy" decoding="async">
         </div>
       </div>
     </section>
@@ -154,7 +154,7 @@
             <div class="when">Mar 2024 — Present</div>
             <div class="what">
               <div class="org-head">
-                <img class="org-logo" src="media/entrata.jpeg" alt="Entrata India logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
+                <img class="org-logo" src="media/orgs/entrata.jpeg" alt="Entrata India logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
                 <h3>Senior Engineer — Entrata India</h3>
               </div>
               <p>Remote (Maharashtra, India). Full‑stack contributions; AI integrations; AWS and data tooling.</p>
@@ -164,7 +164,7 @@
             <div class="when">Dec 2023 — Mar 2024</div>
             <div class="what">
               <div class="org-head">
-                <img class="org-logo" src="media/mahindra_comviva_logo.jpeg" alt="Comviva logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
+                <img class="org-logo" src="media/orgs/mahindra_comviva_logo.jpeg" alt="Comviva logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
                 <h3>Senior Technical Lead — Comviva</h3>
               </div>
               <p>Remote (Karnataka, India). Product catalog leadership, Docker/AWS, Agile delivery.</p>
@@ -174,7 +174,7 @@
             <div class="when">Feb 2023 — Nov 2023</div>
             <div class="what">
               <div class="org-head">
-                <img class="org-logo" src="media/mahindra_comviva_logo.jpeg" alt="Comviva logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
+                <img class="org-logo" src="media/orgs/mahindra_comviva_logo.jpeg" alt="Comviva logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
                 <h3>Technical Lead — Comviva</h3>
               </div>
               <p>Led engineering initiatives across web stack; CI/CD and delivery improvements.</p>
@@ -184,7 +184,7 @@
             <div class="when">Apr 2021 — Jan 2023</div>
             <div class="what">
               <div class="org-head">
-                <img class="org-logo" src="media/tech_mahindra_logo.jpeg" alt="Tech Mahindra logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
+                <img class="org-logo" src="media/orgs/tech_mahindra_logo.jpeg" alt="Tech Mahindra logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
                 <h3>Senior Software Engineer — Tech Mahindra</h3>
               </div>
               <p>Remote (Karnataka, India). Performance, search, and platform engineering on large‑scale systems.</p>
@@ -194,7 +194,7 @@
             <div class="when">May 2018 — Mar 2021</div>
             <div class="what">
               <div class="org-head">
-                <img class="org-logo" src="media/tech_mahindra_logo.jpeg" alt="Tech Mahindra logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
+                <img class="org-logo" src="media/orgs/tech_mahindra_logo.jpeg" alt="Tech Mahindra logo" onerror="this.onerror=null;this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2248%22 height=%2248%22><rect width=%2248%22 height=%2248%22 rx=%228%22 fill=%22%23141b22%22/><path d=%22M12 24h24v4H12z%22 fill=%22%239fb0c3%22/></svg>';">
                 <h3>Software Engineer — Tech Mahindra</h3>
               </div>
               <p>Feature development, Magento/PHP stack, CI/CD pipelines, cloud tooling.</p>
@@ -281,14 +281,14 @@
         <h2 class="section-title">Awards</h2>
         <div class="cards" style="grid-template-columns:1fr; gap:14px;">
           <article class="award-card">
-            <img class="award-img" src="media/comviva_award_1.jpg" alt="Certificate preview" loading="lazy">
+            <img class="award-img" src="media/awards/comviva_award_1.jpg" alt="Certificate preview" loading="lazy">
             <div>
               <h3 class="award-title">Discretionary Award (Unit Level) - Comviva</h3>
               <p class="award-desc">for the period of Q4, FY'22-23.</p>
             </div>
           </article>
           <article class="award-card">
-            <img class="award-img" src="media/techm_bravo_1.png" alt="Certificate preview" loading="lazy">
+            <img class="award-img" src="media/awards/techm_bravo_1.png" alt="Certificate preview" loading="lazy">
             <div>
               <h3 class="award-title">Bravo Award - Tech Mahindra</h3>
               <p class="award-desc">21st December 2021</p>
