--- a/apps.html
+++ b/apps.html
@@ -43,8 +43,8 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#extracurricular">Extracurricular</a></li>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">Achievements</a></li>
             <li aria-current="page">Apps</li>
           </ol>
         </nav>
