Enhance book cards in books.html with improved layout and additional details, including publication years, genres, and descriptions for better user engagement.

--- a/books.html
+++ b/books.html
@@ -48,23 +48,40 @@
             <li aria-current="page">Books</li>
           </ol>
         </nav>
-        <div class="cards">
-          <article class="card">
-            <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">
-              <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy" decoding="async">
+        <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
+          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
+            <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener" style="flex-shrink: 0;">
+              <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy" decoding="async" style="width: 120px; height: auto;">
             </a>
-            <div class="card-head" style="margin-top:10px;">
-              <h3><a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">Kaali</a></h3>
-              <span class="tag">2023</span>
+            <div style="flex: 1;">
+              <div class="card-head" style="margin: 0;">
+                <h3><a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">Kaali (2023)</a></h3>
+                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+                  <span class="tag">Fiction</span>
+                  <span class="tag">Violent</span>
+                  <span class="tag">Action</span>
+                </div>
+              </div>
+              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+                Psychopaths are often difficult to spot as they can blend in with society so easily due to their lack of emotions and guilt. This tendency can lead to dangerous situations, and individuals who start representing God may pose particular risks. It's important to be aware of the dangers posed by psychopaths and to take precautions to avoid getting involved with them.
+              </p>
             </div>
           </article>
-          <article class="card">
-            <a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">
-              <img class="book-cover" src="media/books/I_am_Sorry_Gobinda Nandi.jpg" alt="I am Sorry book cover" loading="lazy" decoding="async">
+          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
+            <a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener" style="flex-shrink: 0;">
+              <img class="book-cover" src="media/books/I_am_Sorry_Gobinda Nandi.jpg" alt="I am Sorry book cover" loading="lazy" decoding="async" style="width: 120px; height: auto;">
             </a>
-            <div class="card-head" style="margin-top:10px;">
-              <h3><a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">I am Sorry</a></h3>
-              <span class="tag">2018</span>
+            <div style="flex: 1;">
+              <div class="card-head" style="margin: 0;">
+                <h3><a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">I am Sorry (2018)</a></h3>
+                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+                  <span class="tag">Fiction</span>
+                  <span class="tag">Thriller</span>
+                </div>
+              </div>
+              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+                The city of sin was in decline on a stormy and dark evening as news channels became politicized and police prepared their weapons. A live video was being streamed on all major social media platforms, and the entire country was watching as a potential massacre unfolded. The video showed only a single person sitting in a dark room, whispering, "I am sorry."
+              </p>
             </div>
           </article>
         </div>
