Add upcoming book release card for "NA (2026)" in books.html to inform users about future publications and enhance content engagement.

--- a/books.html
+++ b/books.html
@@ -50,6 +50,22 @@
         </nav>
         <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
           <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
+            <div style="flex-shrink: 0; width: 120px; height: 160px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--muted);">
+              <span style="font-size: 24px;">📖</span>
+            </div>
+            <div style="flex: 1;">
+              <div class="card-head" style="margin: 0;">
+                <h3 style="margin: 0;">NA (2026)</h3>
+                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+                  <span class="tag">Coming Soon</span>
+                </div>
+              </div>
+              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+                Stay tuned for more details about this upcoming release planned for 2026.
+              </p>
+            </div>
+          </article>
+          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
             <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener" style="flex-shrink: 0;">
               <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy" decoding="async" style="width: 120px; height: auto;">
             </a>
