Add upcoming Android app card for "NA (2026)" in apps.html to inform users about future releases and enhance content engagement. Update description for "Quit Smoking" app for improved clarity and user experience.

--- a/apps.html
+++ b/apps.html
@@ -55,6 +55,24 @@
               <div class="app-head">
                 <img class="app-icon" src="https://www.google.com/s2/favicons?sz=128&domain=play.google.com" alt="Google Play icon" loading="lazy" decoding="async">
                 <div>
+                  <h3 style="margin:0;">NA (2026)</h3>
+                  <span class="tag">Coming Soon</span>
+                </div>
+              </div>
+              <div style="width: 64px; height: 64px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 14px; display: flex; align-items: center; justify-content: center; color: var(--muted); flex-shrink: 0;">
+                <span style="font-size: 20px;">📱</span>
+              </div>
+            </div>
+            <p style="margin:10px 0 0; color:var(--muted);">
+              Stay tuned for more details about this upcoming Android app planned for 2026.
+            </p>
+            <p style="margin:8px 0 0; color:var(--muted); font-size:13px;">Planned release: 2026</p>
+          </article>
+          <article class="card">
+            <div class="app-row">
+              <div class="app-head">
+                <img class="app-icon" src="https://www.google.com/s2/favicons?sz=128&domain=play.google.com" alt="Google Play icon" loading="lazy" decoding="async">
+                <div>
                   <h3 style="margin:0;">
                     <a class="book-link" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1" target="_blank" rel="noopener">Quit Smoking</a>
                   </h3>
@@ -64,7 +82,7 @@
               <img class="app-icon-lg" src="media/apps/quit_smoking_logo_gobinda_nandi.jpg" alt="Quit Smoking app icon" loading="lazy" decoding="async">
             </div>
             <p style="margin:10px 0 0; color:var(--muted);">
-              "Quit Smoking" is your companion to track daily cigarette consumption and milestones on your smoke‑free journey.
+              "Quit Smoking" is your companion in your journey to a smoke-free life. Track your daily cigarette consumption and see how your quit rate improves over time. Unlock badges/awards as you reach important milestones, providing you with a sense of accomplishment.
             </p>
             <p style="margin:8px 0 0; color:var(--muted); font-size:13px;">Published on Dec 16, 2024</p>
             <div class="cta" style="margin-top:10px;">
