Update app icons in apps.html to use local SVG assets for improved performance and consistency. Remove outdated experience section from index.html to streamline content. Add new sections for Extensions & Plugins and Windows Game in misc.html, including detailed descriptions and links for better user engagement.

--- a/misc.html
+++ b/misc.html
@@ -48,6 +48,7 @@
             <li aria-current="page">Miscellaneous</li>
           </ol>
         </nav>
+        <h2 class="section-title">Extensions & Plugins</h2>
         <div class="cards">
           <article class="card">
             <div class="app-row">
@@ -65,9 +66,37 @@
             <p style="margin:10px 0 0; color:var(--muted);">
               A powerful VS Code extension designed to automate and streamline code documentation for PHP and JavaScript. Generates class, method, and property documentation comments with customizable author details, versioning, and copyright information.
             </p>
-            <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">Released on Jan 24, 2025</p>
+            <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">Released on March 22, 2025</p>
             <div class="cta" style="margin-top:10px;">
               <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate" target="_blank" rel="noopener">View on VS Code Marketplace</a>
+            </div>
+          </article>
+        </div>
+        <br>
+        <h2 class="section-title">Windows Game</h2>
+        <div class="cards">
+          <article class="card">
+            <div class="app-row">
+              <div class="app-head">
+                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy" decoding="async">
+                <div>
+                  <h3 style="margin:0;">
+                    <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Sudoku for Windows</a>
+                  </h3>
+                  <span class="tag">Windows Game</span>
+                </div>
+              </div>
+              <img class="app-icon-lg" src="media/extension/sudoku_logo.png" alt="Sudoku for Windows logo" loading="lazy" decoding="async" style="background:#fff; border-radius:8px;">
+            </div>
+            <p style="margin:10px 0 0; color:var(--muted);">
+              A classic Sudoku game for Windows, originally developed in 2012 using Visual Basic 6. Features multiple difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline play with a focus on performance and simplicity.
+            </p>
+            <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">
+              Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View on GitHub</a>
+            </p>
+            <div class="cta" style="margin-top:10px;">
+              <a class="btn primary" href="https://github.com/inandi/sudoku-windows/releases/latest" target="_blank" rel="noopener">Download for Windows</a>
+              <a class="btn ghost" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Source Code</a>
             </div>
           </article>
         </div>
