--- a/apps.html
+++ b/apps.html
@@ -53,7 +53,7 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="https://www.google.com/s2/favicons?sz=128&domain=play.google.com" alt="Google Play icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy" decoding="async">
                 <div>
                   <h3 style="margin:0;">NA (2026)</h3>
                   <span class="tag">Coming Soon</span>
@@ -71,7 +71,7 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="https://www.google.com/s2/favicons?sz=128&domain=play.google.com" alt="Google Play icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy" decoding="async">
                 <div>
                   <h3 style="margin:0;">
                     <a class="book-link" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1" target="_blank" rel="noopener">Quit Smoking</a>
