--- a/apps.html
+++ b/apps.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
   <title>Portfolio • Gobinda Nandi</title>
-  <meta name="description" content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
+  <meta name="description"
+    content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
 </head>
+
 <body>
   <div class="bg" aria-hidden="true">
     <canvas id="quantum" class="bg-canvas"></canvas>
     <svg class="bg-fluid" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid slice" role="img">
       <defs>
         <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
-          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25"/>
-          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12"/>
+          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25" />
+          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12" />
         </linearGradient>
         <linearGradient id="g2" x1="1" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18"/>
-          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10"/>
+          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18" />
+          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10" />
         </linearGradient>
-        <filter id="blur10"><feGaussianBlur stdDeviation="20"/></filter>
+        <filter id="blur10">
+          <feGaussianBlur stdDeviation="20" />
+        </filter>
       </defs>
       <g filter="url(#blur10)">
-        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)"/>
-        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)"/>
+        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)" />
+        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)" />
       </g>
     </svg>
   </div>
@@ -53,13 +60,15 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy"
+                  decoding="async">
                 <div>
                   <h3 style="margin:0;">NA (2026)</h3>
                   <span class="tag">Coming Soon</span>
                 </div>
               </div>
-              <div style="width: 64px; height: 64px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 14px; display: flex; align-items: center; justify-content: center; color: var(--muted); flex-shrink: 0;">
+              <div
+                style="width: 64px; height: 64px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 14px; display: flex; align-items: center; justify-content: center; color: var(--muted); flex-shrink: 0;">
                 <span style="font-size: 20px;">📱</span>
               </div>
             </div>
@@ -71,26 +80,32 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/apps/playstore-svgrepo-com.svg" alt="Google Play icon" loading="lazy"
+                  decoding="async">
                 <div>
                   <h3 style="margin:0;">
-                    <a class="book-link" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1" target="_blank" rel="noopener">Quit Smoking</a>
+                    <a class="book-link" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1"
+                      target="_blank" rel="noopener">Quit Smoking</a>
                   </h3>
                   <span class="tag">Android</span>
                 </div>
               </div>
-              <img class="app-icon-lg" src="media/apps/quit_smoking_logo_gobinda_nandi.jpg" alt="Quit Smoking app icon" loading="lazy" decoding="async">
+              <img class="app-icon-lg" src="media/apps/quit_smoking_logo_gobinda_nandi.jpg" alt="Quit Smoking app icon"
+                loading="lazy" decoding="async">
             </div>
             <p style="margin:10px 0 0; color:var(--muted);">
-              "Quit Smoking" is your companion in your journey to a smoke-free life. Track your daily cigarette consumption and see how your quit rate improves over time. Unlock badges/awards as you reach important milestones, providing you with a sense of accomplishment.
+              "Quit Smoking" is your companion in your journey to a smoke-free life. Track your daily cigarette
+              consumption and see how your quit rate improves over time. Unlock badges/awards as you reach important
+              milestones, providing you with a sense of accomplishment.
             </p>
             <p style="margin:8px 0 0; color:var(--muted); font-size:13px;">Published on Dec 16, 2024</p>
             <div class="cta" style="margin-top:10px;">
-              <a class="btn primary" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1" target="_blank" rel="noopener">View on Google Play</a>
+              <a class="btn primary" href="https://play.google.com/store/apps/details?id=com.inandi.smoke&pli=1"
+                target="_blank" rel="noopener">View on Google Play</a>
             </div>
           </article>
         </div>
-       
+
       </div>
     </section>
   </main>
@@ -101,5 +116,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
 
+</html>
