--- a/books.html
+++ b/books.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
   <title>Portfolio • Gobinda Nandi</title>
-  <meta name="description" content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
+  <meta name="description"
+    content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
 </head>
+
 <body>
   <div class="bg" aria-hidden="true">
     <canvas id="quantum" class="bg-canvas"></canvas>
     <svg class="bg-fluid" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid slice" role="img">
       <defs>
         <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
-          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25"/>
-          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12"/>
+          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25" />
+          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12" />
         </linearGradient>
         <linearGradient id="g2" x1="1" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18"/>
-          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10"/>
+          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18" />
+          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10" />
         </linearGradient>
-        <filter id="blur10"><feGaussianBlur stdDeviation="20"/></filter>
+        <filter id="blur10">
+          <feGaussianBlur stdDeviation="20" />
+        </filter>
       </defs>
       <g filter="url(#blur10)">
-        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)"/>
-        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)"/>
+        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)" />
+        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)" />
       </g>
     </svg>
   </div>
@@ -50,7 +57,8 @@
         </nav>
         <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
           <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <div style="flex-shrink: 0; width: 120px; height: 160px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--muted);">
+            <div
+              style="flex-shrink: 0; width: 120px; height: 160px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--muted);">
               <span style="font-size: 24px;">📖</span>
             </div>
             <div style="flex: 1;">
@@ -66,12 +74,15 @@
             </div>
           </article>
           <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener" style="flex-shrink: 0;">
-              <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy" decoding="async" style="width: 120px; height: auto;">
+            <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener"
+              style="flex-shrink: 0;">
+              <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy"
+                decoding="async" style="width: 120px; height: auto;">
             </a>
             <div style="flex: 1;">
               <div class="card-head" style="margin: 0;">
-                <h3><a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">Kaali (2023)</a></h3>
+                <h3><a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">Kaali
+                    (2023)</a></h3>
                 <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
                   <span class="tag">Fiction</span>
                   <span class="tag">Violent</span>
@@ -79,24 +90,33 @@
                 </div>
               </div>
               <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
-                Psychopaths are often difficult to spot as they can blend in with society so easily due to their lack of emotions and guilt. This tendency can lead to dangerous situations, and individuals who start representing God may pose particular risks. It's important to be aware of the dangers posed by psychopaths and to take precautions to avoid getting involved with them.
+                Psychopaths are often difficult to spot as they can blend in with society so easily due to their lack of
+                emotions and guilt. This tendency can lead to dangerous situations, and individuals who start
+                representing God may pose particular risks. It's important to be aware of the dangers posed by
+                psychopaths and to take precautions to avoid getting involved with them.
               </p>
             </div>
           </article>
           <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener" style="flex-shrink: 0;">
-              <img class="book-cover" src="media/books/I_am_Sorry_Gobinda Nandi.jpg" alt="I am Sorry book cover" loading="lazy" decoding="async" style="width: 120px; height: auto;">
+            <a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener"
+              style="flex-shrink: 0;">
+              <img class="book-cover" src="media/books/I_am_Sorry_Gobinda Nandi.jpg" alt="I am Sorry book cover"
+                loading="lazy" decoding="async" style="width: 120px; height: auto;">
             </a>
             <div style="flex: 1;">
               <div class="card-head" style="margin: 0;">
-                <h3><a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">I am Sorry (2018)</a></h3>
+                <h3><a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">I am Sorry
+                    (2018)</a></h3>
                 <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
                   <span class="tag">Fiction</span>
                   <span class="tag">Thriller</span>
                 </div>
               </div>
               <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
-                The city of sin was in decline on a stormy and dark evening as news channels became politicized and police prepared their weapons. A live video was being streamed on all major social media platforms, and the entire country was watching as a potential massacre unfolded. The video showed only a single person sitting in a dark room, whispering, "I am sorry."
+                The city of sin was in decline on a stormy and dark evening as news channels became politicized and
+                police prepared their weapons. A live video was being streamed on all major social media platforms, and
+                the entire country was watching as a potential massacre unfolded. The video showed only a single person
+                sitting in a dark room, whispering, "I am sorry."
               </p>
             </div>
           </article>
@@ -111,5 +131,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
 
+</html>
