--- a/index.html
+++ b/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
   <title>Portfolio • Gobinda Nandi</title>
-  <meta name="description" content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
+  <meta name="description"
+    content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
 </head>
+
 <body>
   <div class="bg" aria-hidden="true">
     <canvas id="quantum" class="bg-canvas"></canvas>
     <svg class="bg-fluid" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid slice" role="img">
       <defs>
         <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
-          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25"/>
-          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12"/>
+          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25" />
+          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12" />
         </linearGradient>
         <linearGradient id="g2" x1="1" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18"/>
-          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10"/>
+          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18" />
+          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10" />
         </linearGradient>
-        <filter id="blur10"><feGaussianBlur stdDeviation="20"/></filter>
+        <filter id="blur10">
+          <feGaussianBlur stdDeviation="20" />
+        </filter>
       </defs>
       <g filter="url(#blur10)">
-        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)"/>
-        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)"/>
+        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)" />
+        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)" />
       </g>
     </svg>
   </div>
@@ -43,14 +50,16 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <h1 class="reveal">Product-Focused Software Engineer</h1>
-          <p class="sub reveal">Building reliable, performant, and accessible web applications. Confidential client work anonymized.</p>
+          <p class="sub reveal">Building reliable, performant, and accessible web applications. Confidential client work
+            anonymized.</p>
           <div class="cta reveal">
             <a class="btn primary" href="#projects">View Projects</a>
           </div>
         </div>
         <div class="hero-badge reveal" aria-hidden="true">
           <div class="badge glow"></div>
-          <img class="avatar" src="media/logos/iNandi.jpeg" alt="Gobinda Nandi portrait" loading="lazy" decoding="async">
+          <img class="avatar" src="media/logos/iNandi.jpeg" alt="Gobinda Nandi portrait" loading="lazy"
+            decoding="async">
         </div>
       </div>
     </section>
@@ -69,8 +78,10 @@
           </p>
         </div>
         <ul class="highlights">
-            <li>Built architecture from scratch to collect and pipeline ~1.5B data points periodically from client sites to AWS, secured over VPN; designed ingestion, storage, and processing flows for reliability and scale.</li>
-            <li>Led code quality initiative across a large legacy codebase; resolved ~84% violations and refactored critical paths to significantly improve performance and maintainability.</li>
+          <li>Built architecture from scratch to collect and pipeline ~1.5B data points periodically from client sites
+            to AWS, secured over VPN; designed ingestion, storage, and processing flows for reliability and scale.</li>
+          <li>Led code quality initiative across a large legacy codebase; resolved ~84% violations and refactored
+            critical paths to significantly improve performance and maintainability.</li>
         </ul>
       </div>
     </section>
@@ -96,7 +107,8 @@
 
     <section id="projects" class="section">
       <div class="container">
-        <h2 class="section-title">Featured Projects <a href="projects.html" class="btn ghost" style="margin-left:8px;padding:4px 8px;">View all</a></h2>
+        <h2 class="section-title">Featured Projects <a href="projects.html" class="btn ghost"
+            style="margin-left:8px;padding:4px 8px;">View all</a></h2>
         <div class="cards">
           <article class="card">
             <div class="card-head">
@@ -119,7 +131,8 @@
               <span class="tag">Confidential</span>
             </div>
             <p>
-              Led performance and UX initiatives for a high-traffic storefront. Implemented code-splitting and checkout UX.
+              Led performance and UX initiatives for a high-traffic storefront. Implemented code-splitting and checkout
+              UX.
             </p>
             <ul class="meta">
               <li>Role: Frontend lead</li>
@@ -175,5 +188,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
 
+</html>
