--- a/misc.html
+++ b/misc.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
   <title>Portfolio • Gobinda Nandi</title>
-  <meta name="description" content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
+  <meta name="description"
+    content="Portfolio website of Gobinda Nandi: skills, anonymized projects, experience, and contact.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>💼</text></svg>">
 </head>
+
 <body>
   <div class="bg" aria-hidden="true">
     <canvas id="quantum" class="bg-canvas"></canvas>
     <svg class="bg-fluid" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid slice" role="img">
       <defs>
         <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
-          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25"/>
-          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12"/>
+          <stop offset="0%" stop-color="#7aa2ff" stop-opacity="0.25" />
+          <stop offset="100%" stop-color="#5de4c7" stop-opacity="0.12" />
         </linearGradient>
         <linearGradient id="g2" x1="1" x2="0" y1="0" y2="1">
-          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18"/>
-          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10"/>
+          <stop offset="0%" stop-color="#5de4c7" stop-opacity="0.18" />
+          <stop offset="100%" stop-color="#7aa2ff" stop-opacity="0.10" />
         </linearGradient>
-        <filter id="blur10"><feGaussianBlur stdDeviation="20"/></filter>
+        <filter id="blur10">
+          <feGaussianBlur stdDeviation="20" />
+        </filter>
       </defs>
       <g filter="url(#blur10)">
-        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)"/>
-        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)"/>
+        <circle class="blob blob-a" cx="200" cy="200" r="160" fill="url(#g1)" />
+        <circle class="blob blob-b" cx="600" cy="420" r="200" fill="url(#g2)" />
       </g>
     </svg>
   </div>
@@ -53,22 +60,28 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
+                  loading="lazy" decoding="async">
                 <div>
                   <h3 style="margin:0;">
-                    <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate" target="_blank" rel="noopener">DocuMate</a>
+                    <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                      target="_blank" rel="noopener">DocuMate</a>
                   </h3>
                   <span class="tag">VS Code Extension</span>
                 </div>
               </div>
-              <img class="app-icon-lg" src="media/extension/DocuMate_logo.png" alt="DocuMate extension logo" loading="lazy" decoding="async">
+              <img class="app-icon-lg" src="media/extension/DocuMate_logo.png" alt="DocuMate extension logo"
+                loading="lazy" decoding="async">
             </div>
             <p style="margin:10px 0 0; color:var(--muted);">
-              A powerful VS Code extension designed to automate and streamline code documentation for PHP and JavaScript. Generates class, method, and property documentation comments with customizable author details, versioning, and copyright information.
+              A powerful VS Code extension designed to automate and streamline code documentation for PHP and
+              JavaScript. Generates class, method, and property documentation comments with customizable author details,
+              versioning, and copyright information.
             </p>
             <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">Released on March 22, 2025</p>
             <div class="cta" style="margin-top:10px;">
-              <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate" target="_blank" rel="noopener">View on VS Code Marketplace</a>
+              <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                target="_blank" rel="noopener">View on VS Code Marketplace</a>
             </div>
           </article>
         </div>
@@ -78,25 +91,33 @@
           <article class="card">
             <div class="app-row">
               <div class="app-head">
-                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy" decoding="async">
+                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
+                  decoding="async">
                 <div>
                   <h3 style="margin:0;">
-                    <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Sudoku for Windows</a>
+                    <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
+                      rel="noopener">Sudoku for Windows</a>
                   </h3>
                   <span class="tag">Windows Game</span>
                 </div>
               </div>
-              <img class="app-icon-lg" src="media/extension/sudoku_logo.png" alt="Sudoku for Windows logo" loading="lazy" decoding="async" style="background:#fff; border-radius:8px;">
+              <img class="app-icon-lg" src="media/extension/sudoku_logo.png" alt="Sudoku for Windows logo"
+                loading="lazy" decoding="async" style="background:#fff; border-radius:8px;">
             </div>
             <p style="margin:10px 0 0; color:var(--muted);">
-              A classic Sudoku game for Windows, originally developed in 2012 using Visual Basic 6. Features multiple difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline play with a focus on performance and simplicity.
+              A classic Sudoku game for Windows, originally developed in 2012 using Visual Basic 6. Features multiple
+              difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
+              play with a focus on performance and simplicity.
             </p>
             <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">
-              Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View on GitHub</a>
+              Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
+                on GitHub</a>
             </p>
             <div class="cta" style="margin-top:10px;">
-              <a class="btn primary" href="https://github.com/inandi/sudoku-windows/releases/latest" target="_blank" rel="noopener">Download for Windows</a>
-              <a class="btn ghost" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Source Code</a>
+              <a class="btn primary" href="https://github.com/inandi/sudoku-windows/releases/latest" target="_blank"
+                rel="noopener">Download for Windows</a>
+              <a class="btn ghost" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Source
+                Code</a>
             </div>
           </article>
         </div>
@@ -110,5 +131,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
 
+</html>
