Add new course card for "Udemy - Master the Coding Interview Data Structures and Algorithms" and update existing course titles and images in courses.html. Remove outdated course entries for improved content relevance and organization.

--- a/courses.html
+++ b/courses.html
@@ -56,16 +56,27 @@
           </ol>
         </nav>
         <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
+          
+          <article class="card">
+            <img class="certificate-img"
+              src="media/certificates/Master_the_Coding_Interview_Data_Structures_and_Algorithms_gobinda_nandi.jpg"
+              alt="Udemy — Magento 2 Development (Adobe) — 2023" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">Udemy - Master the Coding Interview Data Structures and Algorithms</h3>
+              <span class="tag">2025</span>
+            </div>
+          </article>
+
           <article class="card">
             <img class="certificate-img"
               src="media/certificates/udemy_magento_2_development_adobe_2023_gobinda_nandi.jpg"
               alt="Udemy — Magento 2 Development (Adobe) — 2023" loading="lazy">
             <div class="card-head" style="margin-top:10px;">
-              <h3 style="margin:0;">Udemy - Magento 2 Development (Adobe Commerce) Updated Version (V2)</h3>
+              <h3 style="margin:0;">Udemy - Magento 2 Development (Adobe Commerce) Updated Version</h3>
               <span class="tag">2023</span>
             </div>
-
           </article>
+
           <article class="card">
             <img class="certificate-img" src="media/certificates/uedmy_comeplete_magento_2_2023_gobinda_nandi.jpg"
               alt="Udemy — Complete Magento 2 — 2023" loading="lazy">
@@ -73,36 +84,8 @@
               <h3 style="margin:0;">Udemy - The Complete Magento 2 Course</h3>
               <span class="tag">2023</span>
             </div>
+          </article>
 
-          </article>
-          <article class="card">
-            <img class="certificate-img"
-              src="media/certificates/JavaScript_Understanding_the_Weird_Parts_2020_gobinda_nandi.jpg"
-              alt="JavaScript: Understanding the Weird Parts — 2020" loading="lazy">
-            <div class="card-head" style="margin-top:10px;">
-              <h3 style="margin:0;">Udemy - JavaScript: Understanding the Weird Parts</h3>
-              <span class="tag">2020</span>
-            </div>
-
-          </article>
-          <article class="card">
-            <img class="certificate-img"
-              src="media/certificates/Foundation_to_Oracle_Database_in_Oracle_Cloud_Infrastructure_2020_gobinda_nandi.jpg"
-              alt="Foundation to Oracle Database in Oracle Cloud Infrastructure — 2020" loading="lazy">
-            <div class="card-head" style="margin-top:10px;">
-              <h3 style="margin:0;">Udemy - Foundation to Oracle Database in OCI</h3>
-              <span class="tag">2020</span>
-            </div>
-
-          </article>
-          <article class="card">
-            <img class="certificate-img" src="media/certificates/udemy_Advanced_Javascript_gobinda_nandi.jpg"
-              alt="Udemy — Advanced JavaScript" loading="lazy">
-            <div class="card-head" style="margin-top:10px;">
-              <h3 style="margin:0;">Udemy - Advanced JavaScript</h3>
-              <span class="tag">2020</span>
-            </div>
-          </article>
           <article class="card">
             <img class="certificate-img"
               src="media/certificates/udemy_certificate__Object_Oriented_PHP_%26_MVC__gobinda_nandi.jpg"
@@ -111,8 +94,36 @@
               <h3 style="margin:0;">Udemy - Object Oriented PHP & MVC</h3>
               <span class="tag">2020</span>
             </div>
-
           </article>
+
+          <article class="card">
+            <img class="certificate-img" src="media/certificates/udemy_Advanced_Javascript_gobinda_nandi.jpg"
+              alt="Udemy — Advanced JavaScript" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">Udemy - Advanced JavaScript</h3>
+              <span class="tag">2020</span>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="certificate-img"
+              src="media/certificates/JavaScript_Understanding_the_Weird_Parts_2020_gobinda_nandi.jpg"
+              alt="JavaScript: Understanding the Weird Parts — 2020" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">Udemy - JavaScript: Understanding the Weird Parts</h3>
+              <span class="tag">2020</span>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="certificate-img" src="media/certificates/Foundation_to_Oracle_Database_in_Oracle_Cloud_Infrastructure_2020_gobinda_nandi.jpg"
+              alt="Udemy — ELK Certificate" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">Udemy - Foundation to Oracle Database in Oracle Cloud Infrastructure</h3>
+              <span class="tag">2020</span>
+            </div>
+          </article>
+
           <article class="card">
             <img class="certificate-img" src="media/certificates/udemy_elk_certificate_gobinda_nandi.jpg"
               alt="Udemy — ELK Certificate" loading="lazy">
@@ -120,8 +131,8 @@
               <h3 style="margin:0;">Udemy - Elasticsearch Masterclass with Logstash and Kibana</h3>
               <span class="tag">2019</span>
             </div>
-
           </article>
+
           <article class="card">
             <img class="certificate-img" src="media/certificates/udemy_mean_certificate_gobinda_nandi.jpg"
               alt="Udemy — MEAN Certificate" loading="lazy">
@@ -130,6 +141,7 @@
               <span class="tag">2018</span>
             </div>
           </article>
+
           <article class="card">
             <img class="certificate-img rotate-left-90"
               src="media/certificates/NICT_SQL_Certificate_2011_gobinda_nandi.jpg" alt="NICT SQL Certificate — 2011"
@@ -138,8 +150,8 @@
               <h3 style="margin:0;">NICT SQL Certificate</h3>
               <span class="tag">2011</span>
             </div>
-
           </article>
+
           <article class="card">
             <img class="certificate-img" src="media/certificates/VB_NET_Certificate_2009_gobinda_nandi.jpg"
               alt="VB .NET Certificate — 2009" loading="lazy">
@@ -147,8 +159,8 @@
               <h3 style="margin:0;">VB .NET Certificate</h3>
               <span class="tag">2009</span>
             </div>
-
           </article>
+
           <article class="card">
             <img class="certificate-img" src="media/certificates/NIIT_HTML_Certificate_2004_gobinda_nandi.jpg"
               alt="NIIT HTML Certificate — 2004" loading="lazy">
@@ -156,8 +168,8 @@
               <h3 style="margin:0;">NIIT HTML Certificate</h3>
               <span class="tag">2004</span>
             </div>
-
           </article>
+
           <article class="card">
             <img class="certificate-img"
               src="media/certificates/NIIT_Future_Advantage_Certificate_2003_gobinda_nandi.jpg"
@@ -166,7 +178,6 @@
               <h3 style="margin:0;">NIIT Future Advantage Certificate</h3>
               <span class="tag">2003</span>
             </div>
-
           </article>
         </div>
       </div>
