Add new course cards for "Certified SAFe® 5 Scrum Master" and "Oracle Autonomous Database Cloud 2019 Certified Specialist" in courses.html, including images and credential links. Update layout for improved content presentation.

--- a/courses.html
+++ b/courses.html
@@ -88,6 +88,17 @@
 
           <article class="card">
             <img class="certificate-img"
+              src="media/certificates/Certified_SAFe5_Scrum_Master_gobinda_nandi.png"
+              alt="Udemy — Object Oriented PHP & MVC" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">SAFe by Scaled Agile, Inc. - Certified SAFe® 5 Scrum Master (<a href="https://www.credly.com/badges/b678d132-c2d2-4923-bbb6-7304131a78f6" target="_blank" rel="noopener">Credential</a>)</h3>
+              <span class="tag">2021</span>
+              <span class="tag">expired</span>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="certificate-img"
               src="media/certificates/udemy_certificate__Object_Oriented_PHP_%26_MVC__gobinda_nandi.jpg"
               alt="Udemy — Object Oriented PHP & MVC" loading="lazy">
             <div class="card-head" style="margin-top:10px;">
@@ -112,6 +123,16 @@
             <div class="card-head" style="margin-top:10px;">
               <h3 style="margin:0;">Udemy - JavaScript: Understanding the Weird Parts</h3>
               <span class="tag">2020</span>
+            </div>
+          </article>
+
+          <article class="card">
+            <img class="certificate-img" src="media/certificates/Oracle_Autonomous_Database_Cloud_2019_Certified_Specialist_gobinda_nandi.png"
+              alt="Udemy — ELK Certificate" loading="lazy">
+            <div class="card-head" style="margin-top:10px;">
+              <h3 style="margin:0;">Oracle - Oracle Autonomous Database Cloud 2019 Certified Specialist (<a href="https://www.youracclaim.com/badges/fa2787e1-88d4-4b82-9a3b-226c3bdcd7ce/linked_in_profile" target="_blank" rel="noopener">Credential</a>)</h3>
+              <span class="tag">2020</span>
+              <span class="tag">expired</span>
             </div>
           </article>
 
