Add new award card for "Competency Certificate - Comviva" in index.html, including image and description. Introduce new certificate image asset for enhanced content presentation.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
       <div class="container">
         <h2 class="section-title">Awards</h2>
         <div class="cards" style="grid-template-columns:1fr; gap:14px;">
+
           <article class="award-card">
             <img class="award-img" src="media/awards/comviva_award_1.jpg" alt="Certificate preview" loading="lazy">
             <div>
@@ -170,6 +171,15 @@
               <p class="award-desc">for the period of Q4, FY'22-23.</p>
             </div>
           </article>
+
+          <article class="award-card">
+            <img class="award-img" src="media/awards/Competency_Certificate_Gobinda_Nandi.jpg" alt="Certificate preview" loading="lazy">
+            <div>
+              <h3 class="award-title">Competency Certificate - Comviva</h3>
+              <p class="award-desc">16th May 2023</p>
+            </div>
+          </article>
+
           <article class="award-card">
             <img class="award-img" src="media/awards/techm_bravo_1.png" alt="Certificate preview" loading="lazy">
             <div>
@@ -177,6 +187,7 @@
               <p class="award-desc">21st December 2021</p>
             </div>
           </article>
+
         </div>
       </div>
     </section>
