Refactor Windows Game section in misc.html to improve layout and presentation. Update game description and add new screenshot asset for enhanced visual appeal and user engagement.

--- a/misc.html
+++ b/misc.html
@@ -86,38 +86,39 @@
           </article>
         </div>
         <br>
-        <h2 class="section-title">Windows Game</h2>
-        <div class="cards">
+        <h2 class="section-title">Game</h2>
+        <div class="cards" style="grid-template-columns: 1fr;">
           <article class="card">
-            <div class="app-row">
-              <div class="app-head">
-                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
-                  decoding="async">
-                <div>
-                  <h3 style="margin:0;">
-                    <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
-                      rel="noopener">Sudoku for Windows</a>
-                  </h3>
-                  <span class="tag">Windows Game</span>
+            <div style="display: flex; gap: 20px; align-items: flex-start;">
+              <div style="flex: 1;">
+                <div class="app-row">
+                  <div class="app-head">
+                    <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
+                      decoding="async">
+                    <div>
+                      <h3 style="margin:0;">
+                        <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
+                          rel="noopener">Sudoku for Windows</a>
+                      </h3>
+                      <span class="tag">Windows Game</span>
+                    </div>
+                  </div>
                 </div>
+                <p style="margin:10px 0 0; color:var(--muted);">
+                  A classic Sudoku game for Windows, originally developed in 2010 using Visual Basic 6. Features multiple
+                  difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
+                  play with a focus on performance and simplicity.
+                </p>
+                <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">
+                  Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
+                    on GitHub</a>
+                </p>
               </div>
-              <img class="app-icon-lg" src="media/extension/sudoku_logo.png" alt="Sudoku for Windows logo"
-                loading="lazy" decoding="async" style="background:#fff; border-radius:8px;">
-            </div>
-            <p style="margin:10px 0 0; color:var(--muted);">
-              A classic Sudoku game for Windows, originally developed in 2012 using Visual Basic 6. Features multiple
-              difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
-              play with a focus on performance and simplicity.
-            </p>
-            <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">
-              Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
-                on GitHub</a>
-            </p>
-            <div class="cta" style="margin-top:10px;">
-              <a class="btn primary" href="https://github.com/inandi/sudoku-windows/releases/latest" target="_blank"
-                rel="noopener">Download for Windows</a>
-              <a class="btn ghost" href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">Source
-                Code</a>
+              <div style="flex-shrink: 0;">
+                <img src="media/apps/soduko.jpg" alt="Sudoku for Windows screenshot" 
+                     style="width: 200px; height: auto; border-radius: 8px; border: 1px solid var(--border);" 
+                     loading="lazy" decoding="async">
+              </div>
             </div>
           </article>
         </div>
