Refactor courses layout in courses.html to utilize a responsive grid system. Update styles in styles.css to enhance presentation and ensure mobile compatibility for course cards and images.

--- a/courses.html
+++ b/courses.html
@@ -55,7 +55,7 @@
             <li aria-current="page">Courses & Certifications</li>
           </ol>
         </nav>
-        <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
+        <div class="cards courses-grid">
           
           <article class="card">
             <img class="certificate-img"
